# FRI-NRG-DN1

./: .gitignore  Cargo.toml  README.md  generate-screenshots.ps1
src/: cli.rs  drawing.rs  logging.rs  main.rs  renderer.rs  splat_decoder.rs
src/configuration/: mod.rs  structure.rs  traits.rs  utilities.rs
src/configuration/structure/: base_paths.rs  logging.rs  screenshot.rs
src/splat_decoder/: mod.rs
