[package]
name = "nrg-dn1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["ui", "fancy_errors"]


fancy_errors = ["miette/fancy"]

ui = ["dep:winit", "dep:pixels"]

bench = []


[dependencies]
clap = { version = "4.5.2", features = ["derive"] }

serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"

miette = "7.2.0"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

bytes = "1.5.0"

chrono = "0.4.35"

nalgebra = "0.32.4"

dunce = "1.0.4"

rayon = "1.9.0"
parking_lot = "0.12.1"

winit = { version = "0.29.14", features = ["rwh_05"], optional = true }
pixels = { version = "0.13.0", optional = true }
image = { version = "0.25.0", default-features = false, features = ["rayon", "png"] }
